fixed arrow rendering on firefox

--- a/src/components/CardContainer/cardcontainer.styles.scss
+++ b/src/components/CardContainer/cardcontainer.styles.scss
@@ -8,6 +8,11 @@
     cursor: pointer;
     background-color: #ffffff;
     z-index: 10;
+    display: flex;
+    align-items: center;
+    img {
+      height: 1.5em;
+    }
   }
   .cardcontainer-wrapper {
     display: flex;
